hphp/test/slow/coeffects/cc-this-4.php.expectf
Fatal error: Non-existent type constant A::T1 in %s on line 9
